Changelog for minitage.core
===============================


2.0.32 (unreleased)
-------------------

- Nothing changed yet.


2.0.31 (2012-03-26)
-------------------

- py27 deepcopy bugfix


2.0.30 (2012-03-24)
-------------------

- support py27
- Force run buildout in upgrade mode for dependencies and eggs packages


2.0.29 (2012-03-05)
-------------------

- handle pil migration


2.0.28 (2012-01-23)
-------------------

- Support for in place git branches [kiorky]

2.0.27 (2011-02-25)
-------------------
- proper release


2.0.24
---------------------------

    - fix bug in pretend
    - move to github
    - add mercurial to dependencies to facillitate buildout integration
    - add python versions for pretend and 'eggs' packages 
    - rebuild 'eggs' packages only if they need to be (markers are now in place for the particular python version)
    - remove useless mercurial dep

2.0
-----

FEATURES;

    - Auto Update system.
      When minimerge upgrade (easy_install -U), we have now the infrastructure to run update callbacks.
    - Now minibuilds have revisions, this can facilitate their reinstallation as reverse dependencies
    - give means to select the python to build against for python modules (--all-python-versions or specify python to use along with the package (minimerge -pv foo python-2.4)
    - force eggs category reinstallation
    - add an only dependencies switch to buld only dependencies
    - win32 compatibility (first rush, alpha quality)
    - add replace/per/os/dependencies mecanism in minibuilds
    - allow minibuild names with only major as version

BUGS:

    - support symlink in remove_path (API)
    - enhance remove_path function
    - fix a bug in bootstrapping buildout
    - rewrite fetchers
    - improve proxy handling
    - fix some tests
    - make parts shut up
    - test incomplete downloads and redownload them (package level)
    - make minibuild name more permissive
    - fix bug in new checkouts