@@ -5,7 +5,8 @@ Changelog for minitage.core
 2.0.32 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix all tests
+- Dowload helper now downloads in downloadcache/netloc+urlpath/filename
 
 
 2.0.31 (2012-03-26)
